@@ -854,3 +854,4 @@
 #define SDL_GameControllerHasRumble SDL_GameControllerHasRumble_REAL
 #define SDL_GameControllerHasRumbleTriggers SDL_GameControllerHasRumbleTriggers_REAL
 #define SDL_hid_ble_scan SDL_hid_ble_scan_REAL
+#define SDL_PremultiplyAlpha SDL_PremultiplyAlpha_REAL
